Updated title and favicon

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Bingo Card</title>
+  <title>Trainer Bingo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
