--- a/static/css/style.css
+++ b/static/css/style.css
@@ -236,3 +236,52 @@ td.marked {
     text-align: center;
   }
 }
+
+@media only screen and (orientation: landscape) and (max-height: 500px) {
+  .board-container {
+    width: 95vw;
+    height: 95vh;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+
+  .bingo {
+    top: 5%;
+    left: 5%;
+    right: 5%;
+    bottom: 20%; /* leave room for controls */
+    padding: 5px;
+    gap: 2px;
+  }
+
+  .cell {
+    font-size: 1.5vw;
+    padding: 2px;
+  }
+
+  .controls {
+    position: absolute;
+    bottom: 5px;
+    flex-wrap: wrap;
+    font-size: 0.7rem;
+    gap: 0.5rem;
+    padding: 0.4rem 0.5rem;
+  }
+
+  .controls label {
+    font-size: 0.7rem;
+  }
+
+  .controls button {
+    font-size: 0.6rem;
+    padding: 0.3rem 0.5rem;
+  }
+
+  .suggestion-link {
+    font-size: 0.6rem;
+    margin-left: 0;
+    margin-top: 0.2rem;
+  }
+}
