Phone landscape fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,9 +237,7 @@ td.marked {
   }
 }
 
-@media only screen and (orientation: landscape) and (max-device-height: 500px), 
-       only screen and (orientation: landscape) and (max-height: 500px),
-       only screen and (orientation: landscape) and (max-width: 932px) {
+@media only screen and (orientation: landscape) and (max-width: 1024px) {
   .board-container {
     width: 100vw;
     height: 100vh;
